# IssueApp

./: Makefile  README.md  docker-compose.dev.yml
api/: Cargo.toml  Makefile
api/migrations/: 20241224161437_auth.sql  20241224195727_org.sql  20241225130152_issue.sql  20241231202951_user_preferences.sql  20250105222936_comments.sql  20250110102630_authv2.sql
api/src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs
api/src/api/: mod.rs
api/src/api/handlers/: auth.rs  comment.rs  github.rs  issue.rs  mod.rs  org.rs  user_preferences.rs
api/src/api/middlewares/: authentication_guard.rs  logger.rs  mod.rs  org_guard.rs  role_guard.rs  token_extractor.rs
api/src/api/routes/: auth.rs  comment.rs  github.rs  issue.rs  mod.rs  org.rs  user_preferences.rs
api/src/models/: auth.rs  comment.rs  context.rs  error.rs  github.rs  issue.rs  mod.rs  org.rs  user_preferences.rs
api/src/repositories/: auth_token.rs  comment.rs  issue.rs  mod.rs  org.rs  user.rs  user_preferences.rs
api/src/services/: auth.rs  comment.rs  github.rs  issue.rs  mod.rs  oauth.rs  org.rs  token.rs  user_preferences.rs
api/src/utils/: bearer_token.rs  context.rs  logger.rs  mod.rs  urls.rs
app/: .gitignore  .prettierrc  package.json  pnpm-lock.yaml  tailwind.config.ts
app/src/: app.css  app.d.ts  hooks.server.ts
app/src/lib/: api.ts  constants.ts  index.ts
app/src/routes/: +error.svelte  +layout.svelte
gh-api/: Dockerfile  go.mod  go.sum
gh-api/docs/: docs.go  swagger.json  swagger.yaml
www/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
www/src/: app.css
(+82 files in other folders)
