[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"
colored = "2.1.0"
futures = "0.3.31"
pin-project-lite = "0.2.15"
argon2 = "0.5.3"
thiserror = "2.0.3"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "bigdecimal",
] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rand_core = { version = "0.6", features = ["std"] }
time = { version = "0.3", features = ["std"] }
rusty_paseto = { version = "0.7", features = ["batteries_included", "v4_local"] }
validator = "0.19"
validator_derive = "0.19"
regex = "1.5.4"
oauth2 = "4.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_urlencoded = "0.7.1"
